# serializer version: 1
# name: test_get_devices
  list([
    dict({
      'battery': <DeviceBattery.HIGH: 'high'>,
      'device_id': 'f998be4b9ccc9e136fd8cd8e8e344c31ec3b271d',
      'device_type': <DeviceType.SCALE: 'Scale'>,
      'first_session_date': None,
      'hashed_device_id': 'f998be4b9ccc9e136fd8cd8e8e344c31ec3b271d',
      'last_session_date': datetime.datetime(2023, 9, 4, 22, 39, 39, tzinfo=datetime.timezone.utc),
      'model': <DeviceModel.BODY_PLUS: 5>,
    }),
    dict({
      'battery': <DeviceBattery.HIGH: 'high'>,
      'device_id': 'f998be4b9ccc9e136fd8cd8e8e344c31ec3b271d',
      'device_type': <DeviceType.SCALE: 'Scale'>,
      'first_session_date': datetime.datetime(2023, 9, 4, 22, 39, 39, tzinfo=datetime.timezone.utc),
      'hashed_device_id': 'f998be4b9ccc9e136fd8cd8e8e344c31ec3b271d',
      'last_session_date': None,
      'model': <DeviceModel.BODY_PLUS: 5>,
    }),
  ])
# ---
# name: test_get_new_device
  list([
    dict({
      'battery': <DeviceBattery.HIGH: 'high'>,
      'device_id': 'f998be4b9ccc9e136fd8cd8e8e344c31ec3b271d',
      'device_type': <DeviceType.UNKNOWN: 'unknown'>,
      'first_session_date': None,
      'hashed_device_id': 'f998be4b9ccc9e136fd8cd8e8e344c31ec3b271d',
      'last_session_date': datetime.datetime(2023, 9, 4, 22, 39, 39, tzinfo=datetime.timezone.utc),
      'model': <DeviceModel.UNKNOWN: 0>,
    }),
  ])
# ---
